--- a/src/main/resources/templates/jttp.vm
+++ b/src/main/resources/templates/jttp.vm
@@ -37,6 +37,17 @@
 </style>
 <script>
 	
+	function calculateTimeForInputfileds(hour,min){
+		if (hour < 10){
+			hour = "0" + hour
+		}
+		if (min < 10){
+			min = "0" + min
+		}
+		var time = hour + ':' + min;
+		return time;
+	}
+	
 	function setLoggedDaysDesign(){
 		var dayNumber =  $loggedDays.size();
 	 	for(var i = 0; i < dayNumber; i++){
@@ -218,46 +229,102 @@ $webResourceManager.requireResource("jira.webresources:calendar-en")
 						                    	</td>
 						                	</tr>
 						                    <tr>
-						                        <td  style="width: 100px;">
+						                        <td  style="width: 110px;">
 						                           <input id="startTime"  type="text" name="startTime" value="$startTime" tabindex="1" style="margin-right: 5px; width: 100px;"/> 
 						                        </td>
-						                        <td style="width: 40px;">
-						                           <input id="startNow"  type="button" name="startNow" value="$i18n.getText('plugin.now')" class="button" style="margin-right: 30px; width: 40px;"/>
+						                        <td style="width: 110px;">
+						                           <input id="startChangeDec"  type="button" name="startChangeDec" value="<" class="button" width: 20px;"/>
+						                           <input id="startNow"  type="button" name="startNow" value="$i18n.getText('plugin.now')" class="button" width: 40px;"/>
+						                           <input id="startChangeInc"  type="button" name="startNow" value=">" class="button" style="margin-right: 30px; width: 20px;"/>
 						                           <script>
 														AJS.$("#startNow").click(function() {
 					                   						var currentTime = new Date();
 															var hour = currentTime.getHours();
-															if (hour < 10){
-																hour = "0" + hour
-															}
 															var minute = currentTime.getMinutes();
-															if (minute < 10){
-																minute = "0" + minute
-															}
-															var now = hour + ':' + minute;
+															var now = calculateTimeForInputfileds(hour,minute);
 															AJS.$("#startTime").val(now);
 					               						 });
+					               						AJS.$("#startChangeDec").click(function() {
+					               							var startTimeValParts = AJS.$("#startTime").val().split(':');
+					               							var hour = parseInt(startTimeValParts[0]);
+					               							var min = parseInt(startTimeValParts[1]);
+					               							if(min >= $startTimeChange){
+					               								min = min - $startTimeChange;
+					               							}else{
+					               								var div = $startTimeChange - min;
+					               								min = 60 - div;
+					               								hour = hour - 1;
+					               								if(hour < 0){
+					               								 hour = 23;
+					               								}
+					               							}
+					               							var time = calculateTimeForInputfileds(hour,min);
+															AJS.$("#startTime").val(time);	
+					               						}); 
+					               						AJS.$("#startChangeInc").click(function() {
+					               							var startTimeValParts = AJS.$("#startTime").val().split(':');
+					               							var hour = parseInt(startTimeValParts[0]);
+					               							var min = parseInt(startTimeValParts[1]);
+					               							min = min + $startTimeChange;
+					               							if(min >= 60){
+					               								min = min - 60;
+					               								hour = hour + 1;
+					               								if(hour > 23){
+					               									hour = 0;
+					               								} 
+					               							}
+															var time = calculateTimeForInputfileds(hour,min);
+															AJS.$("#startTime").val(time);	
+					               						}); 
 													</script>
 						                        </td>
 												<td  style="width: 110px">
 						                    	 	<input id="endTime"  type="text" name="endTime" value="$endTime" tabindex="2"  style="margin-right: 5px; width: 100px"/> 
 						                    	 </td>
-						                    	 <td style="width: 40px;">
-						                    	   <input id="endNow"  type="button" name="endNow" value="$i18n.getText('plugin.now')" class="button" style="margin-right: 5px; width: 40px;"/>
+						                    	 <td style="width: 85px;">
+						                    	   <input id="endChangeDec"  type="button" name="endChangeDec" value="<" class="button" width: 20px;"/>
+						                    	   <input id="endNow"  type="button" name="endNow" value="$i18n.getText('plugin.now')" class="button" width: 40px;"/>
+						                    	   <input id="endChangeInc"  type="button" name="endChangeInc" value=">" class="button" style="margin-right: 5px; width: 20px;"/>
 						                           <script>
 														AJS.$("#endNow").click(function() {
 					                   						var currentTime = new Date();
 															var hour = currentTime.getHours();
-															if (hour < 10){
-																hour = "0" + hour
-															}
 															var minute = currentTime.getMinutes();
-															if (minute < 10){
-																minute = "0" + minute
-															}
-															var now = hour + ':' + minute;
+															var now =calculateTimeForInputfileds(hour,minute);
 															AJS.$("#endTime").val(now);
 					               						 });
+					               						 AJS.$("#endChangeDec").click(function() {
+					               							var endTimeValParts = AJS.$("#endTime").val().split(':');
+					               							var hour = parseInt(endTimeValParts[0]);
+					               							var min = parseInt(endTimeValParts[1]);
+					               							if(min >= $startTimeChange){
+					               								min = min - $endTimeChange;
+					               							}else{
+					               								var div = $endTimeChange - min;
+					               								min = 60 - div;
+					               								hour = hour - 1;
+					               								if(hour < 0){
+					               								 hour = 23;
+					               								}
+					               							}
+					               							var time = calculateTimeForInputfileds(hour,min);
+															AJS.$("#endTime").val(time);	
+					               						}); 
+					               						AJS.$("#endChangeInc").click(function() {
+					               							var endTimeValParts = AJS.$("#endTime").val().split(':');
+					               							var hour = parseInt(endTimeValParts[0]);
+					               							var min = parseInt(endTimeValParts[1]);
+					               							min = min + $endTimeChange;
+					               							if(min >= 60){
+					               								min = min - 60;
+					               								hour = hour + 1;
+					               								if(hour > 23){
+					               									hour = 0;
+					               								} 
+					               							}
+															var time = calculateTimeForInputfileds(hour,min);
+															AJS.$("#endTime").val(time);	
+					               						}); 
 													</script>
 						                    	 </td>
 						                    	 <td  style="width: 120px" >
