--- a/src/main/resources/templates/settings.vm
+++ b/src/main/resources/templates/settings.vm
@@ -111,6 +111,23 @@
 						</td>
 					</tr>
 					<tr>
+						<td width="10%" style="text-align: right;">
+							<strong>$i18n.getText("plugin.setting.coloring"):</strong>  
+						</td>
+						<td width="40%">
+						 	<input id="isColoring" type="checkbox" value="use color" name="isColoring" #if($isColoring) checked #end/>
+						</td>
+					</tr>
+					<tr>
+						<td width="10%" style="text-align: right;">
+						</td>
+						<td width="40%">
+                      		<div class="description">
+								$i18n.getText("plugin.setting.coloring.help")
+							</div>
+						</td>
+					</tr>
+					<tr>
 						<td style="text-align: right;" width="10%">
 							<div style="margin-top: 10px; margin-bottom: 10px;">
 								<h3>$i18n.getText("plugin.setting.input.fields.settings")</h3>
